--- a/main.html
+++ b/main.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+	<div>
+  My current favorite song is 
+  <a href="https://www.youtube.com/watch?v=your_youtube_link_here" target="_blank">
+    <song_name>
+  </a>
+</div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
