--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<div>
   My current favorite song is 
-  <a href="https://www.youtube.com/watch?v=your_youtube_link_here" target="_blank">
+  <a href="https://www.youtube.com/watch?v=o2hbckOhAf4&list=RDMMo2hbckOhAf4&start_radio=1" target="_blank">
     <song_name>
   </a>
 </div>
